--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="container">
         <h2>＞﹏＜</h2>
         <h1>欢哥互联已停止运营，请使用我们的其他产品</h1>
+	    <a href="https://quickso.cn/" target="_blank">快点搜</a>
+	    <img src="https://cdn.jsdelivr.net/gh/muzihuaner/huancdn/img/20210520145355.webp" width="150"
+                        height="150" alt="微信公众号">
     </div>
 	<a href="https://huangetech.github.io">© 欢哥科技</a>
 </body>
